methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:6: error: ';' expected but 'while' found.
  }while(!estSurBiscuit())
   ^SlugHunting:11: error: 'while' expected but 'def' found.
def isFacingTrail():Boolean = {
^SlugHunting:20: error: '(' expected but '}' found.
} 
^